...
            android:src="@drawable/line_break"
            android:layout_marginRight="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            ></ImageView>
        <EditText
            android:id="@+id/event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black">
        </EditText>
...
            android:layout_marginRight="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            ></ImageView>

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Loctaion"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"></EditText>

...
            android:hint="Contact Number"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"></EditText>


        <Button
            android:id="@+id/save"
            android:onClick="save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save appointment"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/darker_gray"
            ></Button>

        <ImageView
            android:layout_width="match_parent"
...
